[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onepiece-airflow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests"]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]
include = ["api_utils*"]